Fixed misalignment on the PDP "Wear this with"
Close #68

--- a/static_files/scss/jj-shared.scss
+++ b/static_files/scss/jj-shared.scss
@@ -119,6 +119,17 @@
     .maywerecommend { 
        background : white;
     }
+
+    .maywerecommend .recommendations_maylike {
+        background : none !important;
+        height     : auto;
+
+        &:after {
+            content : '';
+            clear   : both;
+            display : block;
+        }
+    }
 }
 
 .jj .to_top {
